--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Video.js plugin for resuming playback.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack/webpack.config.production && webpack --config webpack/webpack.config",
+    "build": "npm run build:production && npm run build:development",
+    "build:development": "webpack --config webpack/webpack.config",
+    "build:production": "webpack --config webpack/webpack.config.production",
     "lint:js": "eslint src/ webpack/",
     "start": "webpack-dev-server --config webpack/webpack-dev-server"
   },
@@ -26,16 +28,23 @@
   },
   "homepage": "https://github.com/chemoish/videojs-resumecard#readme",
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "clean-webpack-plugin": "^0.1.9",
+    "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.8.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.7.0",
+    "postcss-loader": "^0.9.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "video.js": "^5.10.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
