--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.8.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "moment": "^2.13.0",
     "node-sass": "^3.7.0",
     "postcss-loader": "^0.9.1",
     "sass-loader": "^3.2.0",
