--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.8.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "grunt": "^1.0.1",
+    "grunt-bump": "^0.8.0",
+    "load-grunt-tasks": "^3.5.0",
     "moment": "^2.13.0",
     "node-sass": "^3.7.0",
     "postcss-loader": "^0.9.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "time-grunt": "^1.3.0",
     "video.js": "^5.10.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
